Fix for IGDD-1874 Correct how Authentication is coordinated with getConnection